<resources>
    <string name="app_name">WhatTheFish</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro1_text">COPYRIGHT @2019 MADI LAB, Faculty of Informatics, Burapha University. ALL RIGHTS RESERVED</string>
    <string name="wtf_text">What\'s The Fish?</string>
    <string name="close_text">ปิด</string>
    <string name="search_input">ค้นหาด้วยชื่อ ไทย, อังกฤษ, วิทยาศาสตร์</string>
    <string name="id">ID</string>
    <string name="view_profile">View Profile</string>
    <string name="username">Username</string>
    <string name="thName">ชื่อภาษาไทย</string>
    <string name="engName">ชื่อภาษาอังกฤษ</string>
    <string name="sciName">ชื่อวิทยาศาสตร์</string>
    <string name="appearance">ลักษณะ</string>
    <string name="habitat">แหล่งที่อยู่</string>
    <string name="dissemination">การแพร่กระจาย</string>
    <string name="fishdex_label">พิพิธภัณฑ์สัตว์น้ำ</string>
    <string name="fishdex2_head">สถาบันวิทยาศาสตร์ทางทะเล มหาวิทยาลัยบูรพา</string>
    <string name="card1">สถาบันวิทยาศาสตร์ทางทะเลมหาวิทยาลัยบูรพา</string>
    <string name="intro3_title">ไม่มีการเชื่อมต่อเครือข่ายอินเทอร์เน็ต !</string>
    <string name="intro3_message">กรุณาเชื่อมต่อเครือข่ายอินเทอร์เน็ต</string>
    <string name="intro3_button">ไปที่ตั้งค่า</string>
    <string name="alert_click_detec_title">ขออภัย !</string>
    <string name="alert_click_detec_messagw">Feature นี้ไม่พร้อมใช้งานในขณะนี้</string>
    <string name="intro3_loadText">กำลังโหลดข้อมูลหลัก</string>
    <string name="alert_qrcode">QR-CODE ไม่ถูกต้อง</string>
</resources>
