<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/searchbackground"
    tools:context=".Detail">

    <ImageView
        android:id="@+id/buttonInformation_detail"
        android:layout_width="@dimen/size25dp"
        android:layout_height="@dimen/size25dp"
        android:layout_marginEnd="@dimen/size20dp"
        app:layout_constraintEnd_toStartOf="@+id/ar_qr2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/i" />

    <ImageView
        android:id="@+id/ar_qr2"
        android:layout_width="@dimen/size25dp"
        android:layout_height="@dimen/size25dp"
        android:layout_marginEnd="@dimen/size40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/i" />

    <ImageView
        android:id="@+id/buttonBack_detail"
        android:layout_width="@dimen/size50dp"
        android:layout_height="@dimen/size25dp"
        android:layout_marginStart="@dimen/size40dp"
        android:src="@drawable/backbutton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="@dimen/font20sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonInformation_detail"
        app:layout_constraintStart_toEndOf="@+id/buttonBack_detail"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size30dp">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager_detail"
                android:layout_width="0dp"
                android:layout_height="@dimen/size300dp"
                android:layout_marginStart="@dimen/size100dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/size100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.viewpager.widget.ViewPager>

            <TextView
                android:id="@+id/thName_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size50dp"
                android:layout_marginTop="@dimen/size50dp"
                android:layout_marginEnd="@dimen/size50dp"
                android:background="@color/black"
                android:fontFamily="@font/roboto"
                android:paddingStart="@dimen/size10dp"
                android:paddingTop="@dimen/size5dp"
                android:paddingBottom="@dimen/size10dp"
                android:text="@string/thName"
                android:textColor="@color/yellow"
                android:textSize="@dimen/font20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewPager_detail" />

            <TextView
                android:id="@+id/thName_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size50dp"
                android:layout_marginEnd="@dimen/size50dp"
                android:background="@color/black"
                android:fontFamily="@font/roboto"
                android:paddingStart="@dimen/size30dp"
                android:paddingBottom="@dimen/size10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thName_label" />

            <TextView
                android:id="@+id/engName_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size50dp"
                android:layout_marginEnd="@dimen/size50dp"
                android:background="@color/black"
                android:fontFamily="@font/roboto"
                android:paddingStart="@dimen/size10dp"
                android:paddingBottom="@dimen/size10dp"
                android:text="@string/engName"
                android:textColor="@color/yellow"
                android:textSize="@dimen/font20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thName_text" />

            <TextView
                android:id="@+id/engName_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size50dp"
                android:layout_marginEnd="@dimen/size50dp"
                android:background="@color/black"
                android:fontFamily="@font/roboto"
                android:paddingStart="@dimen/size30dp"
                android:paddingBottom="@dimen/size10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/engName_label" />

            <TextView
                android:id="@+id/sciName_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size50dp"
                android:layout_marginEnd="@dimen/size50dp"
                android:background="@color/black"
                android:fontFamily="@font/roboto"
                android:paddingStart="@dimen/size10dp"
                android:paddingBottom="@dimen/size10dp"
                android:text="@string/sciName"
                android:textColor="@color/yellow"
                android:textSize="@dimen/font20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/engName_text" />

            <TextView
                android:id="@+id/sciName_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size50dp"
                android:layout_marginEnd="@dimen/size50dp"
                android:background="@color/black"
                android:fontFamily="@font/roboto"
                android:paddingStart="@dimen/size30dp"
                android:paddingBottom="@dimen/size10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sciName_label" />

            <TextView
                android:id="@+id/appearance_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size50dp"
                android:layout_marginEnd="@dimen/size50dp"
                android:background="@color/black"
                android:fontFamily="@font/roboto"
                android:paddingStart="@dimen/size10dp"
                android:paddingBottom="@dimen/size10dp"
                android:text="@string/appearance"
                android:textColor="@color/yellow"
                android:textSize="@dimen/font20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sciName_text" />

            <TextView
                android:id="@+id/appearance_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size50dp"
                android:layout_marginEnd="@dimen/size50dp"
                android:background="@color/black"
                android:fontFamily="@font/roboto"
                android:paddingStart="@dimen/size30dp"
                android:paddingBottom="@dimen/size10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appearance_label" />

            <TextView
                android:id="@+id/habitat_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size50dp"
                android:layout_marginEnd="@dimen/size50dp"
                android:background="@color/black"
                android:fontFamily="@font/roboto"
                android:paddingStart="@dimen/size10dp"
                android:paddingBottom="@dimen/size10dp"
                android:text="@string/habitat"
                android:textColor="@color/yellow"
                android:textSize="@dimen/font20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appearance_text" />

            <TextView
                android:id="@+id/habitat_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size50dp"
                android:layout_marginEnd="@dimen/size50dp"
                android:background="@color/black"
                android:fontFamily="@font/roboto"
                android:paddingStart="@dimen/size30dp"
                android:paddingBottom="@dimen/size10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/habitat_label" />

            <TextView
                android:id="@+id/dissemination_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size50dp"
                android:layout_marginEnd="@dimen/size50dp"
                android:background="@color/black"
                android:fontFamily="@font/roboto"
                android:paddingStart="@dimen/size10dp"
                android:paddingBottom="@dimen/size10dp"
                android:text="@string/dissemination"
                android:textColor="@color/yellow"
                android:textSize="@dimen/font20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/habitat_text" />

            <TextView
                android:id="@+id/dissemination_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size50dp"
                android:layout_marginEnd="@dimen/size50dp"
                android:background="@color/black"
                android:fontFamily="@font/roboto"
                android:paddingStart="@dimen/size30dp"
                android:paddingBottom="@dimen/size5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dissemination_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>